# k8s-study

./: LICENSE  README.md
argocd/: justfile  kind-config.yml
argocd/manifests/: deployment.yaml  service.yaml
gitlab/: justfile
hpa/: README.md  justfile  kind-config.yml  values-adapter.yml  workload.yml
hpa/workload-app/: .dockerignore  Cargo.toml  Dockerfile  build.rs  justfile
hpa/workload-app/protos/: hello.proto  workload.proto
hpa/workload-app/src/client/: main.rs  workload.rs
hpa/workload-app/src/server/: config.rs  main.rs  services.rs
hpa/workload-app/src/server/services/: hello.rs  workload.rs
kind/: justfile  kind-pv.yaml
kube-bench/: README.md  justfile  kind-config.yml
kube-hunter/: README.md
kubesec/: README.md  justfile
loki/: justfile  kind-config.yml  kustomization.yaml  prometheus-values.yaml  promtail-values.yaml  values-loki-stack.yaml  values-loki.yaml
pluto/: README.md
pulumi/: Pulumi.yaml  deployment.go  go.mod  go.sum  main.go  ns-baseline.yml  ns-restricted.yml  pod.go  utils.go
vault/: cluster-keys.json  justfile  kind-config.yml
